Fixed horizontal scroll!

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,43 +1,21 @@
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  width: 200%;
+  background: linear-gradient(90deg, orange, purple);
+  background-size: 210% auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 p {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-div{
-  box-sizing: border-box;
-}
-
-.horizontal-scroll-wrapper{
-  position:absolute;
-  display:block;
-  top:0;
-  left:0;
-  width:100vh;
-  max-height:100vw;
-  margin:0;
-  overflow-y:auto;
-  overflow-x:hidden;
-  transform:rotate(-90deg) translateY(-100vh);
-  transform-origin:right top;
-}
-
-.horizontal-scroll-wrapper > div{
-  display:block;
-  padding:5px;
-  background:#cab;
-  transform:rotate(90deg);
-  transform-origin: right top;
-}
-
-.squares{
-  padding:60px 0 0 0;
-}
-
-.squares > div{
-  width:60px;
-  height:60px;
-  margin:10px;
-}
-
-div:nth-child(5) {
-	width:200px;
+  color: #fff;
+  font-size: 4vw;
+  font-family: monospace;
 }
